--- a/kubernetes_manifest/service.yaml
+++ b/kubernetes_manifest/service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vault-guard-service
-spec:
-  type: LoadBalancer
+spec:#
   selector:
     app: vault-guard
   ports:
-    - port: 80
-      targetPort: 4173
+    - protocol: TCP
+      port: 80         # Service port (inside cluster)
+      targetPort: 4173 # Pod's containerPort
