--- a/kubernetes_manifest/service.yaml
+++ b/kubernetes_manifest/service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: vault-guard-service
-spec:#
+  name: vault-guard-nodeport
+spec:
+  type: NodePort
   selector:
     app: vault-guard
   ports:
     - protocol: TCP
-      port: 80         # Service port (inside cluster)
-      targetPort: 4173 # Pod's containerPort
+      port: 80
+      targetPort: 4173
+      nodePort: 31080  # optional: explicit node port; otherwise k8s assigns one
